objects/X9902__c.object
<CustomObject>
    <description>To store data and information related to HUD 9902 reporting, including fields for Generation and Submission statuses, and serves as the parent object for the 9902 Agency, 9902 Client, 9902 Counselor, and 9902 Summary objects.</description>
    <fields>
        <fullName>AgencyGenerationStatus__c</fullName>
        <label>Agency Profile Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyProfileXML__c</fullName>
        <label>Agency Profile XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgencyProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Profile information for the agency.</description>
        <inlineHelpText>Provide details if is a Agency profile</inlineHelpText>
        <label>Agency Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgencySubmissionID__c</fullName>
        <description>Identifier for the submission made by the agency. Enter the unique identifier assigned to the submission.</description>
        <label>Agency Profile ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencySubmissionStatus__c</fullName>
        <description>Status of the submission made by the agency. Indicate the current status of the submission made by the agency.</description>
        <label>Agency Profile Submission</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientGenerationStatus__c</fullName>
        <label>Client Summary Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSubmissionID__c</fullName>
        <description>Identifier for the submission made by the client. Enter the unique identifier assigned to the submission.</description>
        <label>Client Summary ID</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientSubmissionStatus__c</fullName>
        <description>Status of the submission made by the client. Indicate the current status of the submission.</description>
        <label>Client Summary Submission</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summary information for the client</description>
        <inlineHelpText>Provide a summary of relevant information about the client</inlineHelpText>
        <label>Client Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientXml__c</fullName>
        <label>Client Xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CounselorGenerationStatus__c</fullName>
        <label>Counselor Profile Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Profile information for the counselor.</description>
        <inlineHelpText>Provide details if is a Counselor profile</inlineHelpText>
        <label>Counselor Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CounselorSubmissionID__c</fullName>
        <description>Identifier for the submission made by the counselor. Enter the unique identifier assigned to the submission.</description>
        <label>Counselor Profile ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorSubmissionStatus__c</fullName>
        <description>Status of the submission made by the counselor. Indicate the current status of the submission.</description>
        <label>Counselor Profile Submission</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CounselorXML__c</fullName>
        <label>Counselor XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <inlineHelpText>Indicate the year of the reporting period.</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeriodEndDate__c</fullName>
        <description>End date of the reporting period.</description>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodStartDate__c</fullName>
        <description>Start date of the reporting period.</description>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Quarter of the reporting period.</description>
        <inlineHelpText>Indicate the quarter of the reporting period.</inlineHelpText>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quarter 1</fullName>
                    <label>Q1 (10/1 - 12/31)</label>
                </value>
                <value>
                    <fullName>Quarter 2</fullName>
                    <label>Q2 (10/1 - 3/31)</label>
                </value>
                <value>
                    <fullName>Quarter 3</fullName>
                    <label>Q3 (10/1 - 6/30)</label>
                </value>
                <value>
                    <fullName>Quarter 4</fullName>
                    <label>Q4 (10/1 - 9/30)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary9902GenerationStatus__c</fullName>
        <label>9902 Summary Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary9902SubmissionID__c</fullName>
        <description>Identifier for the submission of the 9902. Unique identifier assigned to the submission of the 9902.</description>
        <label>9902 Summary ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary9902SubmissionStatus__c</fullName>
        <description>Status of the submission of the 9902. Indicate the current status of the submission of the 9902.</description>
        <label>9902 Summary Submission</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary9902__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summary information for the 9902.</description>
        <inlineHelpText>Indicate 9902 summary</inlineHelpText>
        <label>Summary 9902</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SummaryXml__c</fullName>
        <label>Summary Xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version information for the record</description>
        <inlineHelpText>Indicate the version of the record.</inlineHelpText>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Xml__c</fullName>
        <label>Xml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>9902</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quarter__c</columns>
        <columns>PeriodStartDate__c</columns>
        <columns>PeriodEndDate__c</columns>
        <columns>AgencySubmissionStatus__c</columns>
        <columns>CounselorSubmissionStatus__c</columns>
        <columns>ClientSubmissionStatus__c</columns>
        <columns>Summary9902SubmissionStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HUD-{000000}</displayFormat>
        <label>9902</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>9902</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>